--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "blacklist",
+  "name": "adultblacklist",
   "description": "Blocks the biggest adult sites",
-  "version": "0.2.1",
+  "version": "0.3.0",
 
   "permissions": ["tabs"],
 
