--- a/addon/manifest.json
+++ b/addon/manifest.json
@@ -2,7 +2,10 @@
   "manifest_version": 2,
   "name": "adultblacklist",
   "description": "Blocks the biggest adult sites",
-  "version": "0.3.0",
+  "version": "0.4.1",
+  "applications": {
+    "gecko": { "id": "{b4eda7b1-2bbe-4961-b336-aaad77d87a47}" }
+  },
 
   "permissions": ["tabs"],
 
